- Removed FexTracker due to licensing problems; there are plans to implement a new motion tracker in its place (jfs)
- Changed translation assistent to use Scintilla text controls to avoid several issues, including Right-To-Left text entry. (AMZ)


= 1.10 beta - 2006.08.07 ===========================

- Always defaults to Audio Cache=1 (ram) now (Myrsloik)
- Automation: Added xor(a,b) boolean logical function to utils.lua (jfs)
- Automation: Various changes to karaskel.lua and karaskel-adv.lua: (jfs)
   o Added some debug-calls (which are disabled by default; aegisub.output_debug is replaced with a do-nothing function (you can change this in karaskel.lua)
   o The regular aegisub.output_debug is aliased to aegisub.output_warning, in order to always be able to show real warnings, in case something goes wrong
   o Fixed bug, triggered when a line had a style not defined in the subs. A warning is now shown instead.
- Fixed bug in parser that would cause Aegisub to crash if you had a \fn without parameters and tried to pick font. (AMZ)
- Fixed crash when opening audio that appeared in 1.08 (Myrsloik)
- Karaoke mode changes: (jfs)
   o New syllable-splitter: Click "split" to enable splitting-mode, click in syllable view to set split-markers, then click commit to do the splitting
   o The correct \k tag (\k, \kf, \ko, \K) is now kept when splitting/joining
   o When editing karaoke-timing for a line and not splitting/joining, all tags are kept intact, so only the \k tag timings are changed
   o Right-click in karaoke area to change the tag (\k, \kf, \ko)
   o Click and drag to select multiple syllables
- Fixed bug where \t tags (among others?) would lose their parameters when being rebuilt (happens with Framerate Transport export filter, Automation and during the karaoke timing improvements listed above, among other places) (jfs)
- Implemented FexTracker, for automatically tracking positions on the video and placing text accordingly (Tentacle)